[gd_scene load_steps=94 format=3 uid="uid://rv0j4ek8e0bq"]

[ext_resource type="Texture2D" uid="uid://cuc0hgso5b7he" path="res://assets/sprites/player/Bob/male_hero_template-idle.png" id="1_3c3w1"]
[ext_resource type="Script" uid="uid://bl4noxsft20wy" path="res://Player/player.gd" id="1_wnvi2"]
[ext_resource type="Texture2D" uid="uid://xmiyeiap6df6" path="res://assets/sprites/player/Bob/male_hero_template-slide.png" id="2_aqcbf"]
[ext_resource type="Texture2D" uid="uid://dl7q2h74bfkpu" path="res://assets/sprites/player/Bob/male_hero_template-run.png" id="2_wnvi2"]
[ext_resource type="Texture2D" uid="uid://c5yqy42ckfunf" path="res://assets/sprites/player/Bob/male_hero_template-fall_loop.png" id="3_gskgj"]
[ext_resource type="Texture2D" uid="uid://cgl38ftceuk2b" path="res://assets/sprites/player/Bob/male_hero_template-combo_1.png" id="3_v5i4m"]
[ext_resource type="Texture2D" uid="uid://dfq68nafw73wg" path="res://assets/sprites/player/Bob/male_hero_template-combo_1_end.png" id="4_p1lr0"]
[ext_resource type="Texture2D" uid="uid://fkbhjbyab44i" path="res://assets/sprites/player/Bob/male_hero_template-jump.png" id="5_06mnu"]
[ext_resource type="Texture2D" uid="uid://ymw0e3qpm5x4" path="res://assets/sprites/player/2 Punk/Punk_punch.png" id="5_kvwax"]
[ext_resource type="PackedScene" uid="uid://dk0h5acav7nc6" path="res://Player/components/gravity.tscn" id="7_npwbq"]
[ext_resource type="PackedScene" uid="uid://db5rxj6t7jqk4" path="res://Player/components/movement_component.tscn" id="8_pn6s4"]
[ext_resource type="PackedScene" uid="uid://c3mdjjastif0n" path="res://Player/components/input_component.tscn" id="9_7oing"]
[ext_resource type="PackedScene" uid="uid://44d4hx5abgvi" path="res://Player/components/animation_component.tscn" id="10_7oing"]
[ext_resource type="PackedScene" uid="uid://cvatfdkchnop2" path="res://Player/components/jump_component.tscn" id="11_5stf6"]
[ext_resource type="PackedScene" uid="uid://cybaqaepqsu8" path="res://Player/components/advanced_jump_component.tscn" id="12_180ig"]
[ext_resource type="Script" uid="uid://fiaq6np0wfbp" path="res://Player/character_state_machine.gd" id="13_20koh"]
[ext_resource type="Script" uid="uid://chhd6vawmamo8" path="res://Player/state_debug_label.gd" id="16_8qjgm"]
[ext_resource type="Script" uid="uid://cddsa4jqrpo6b" path="res://Player/states/idle_state.gd" id="17_kswpp"]
[ext_resource type="Script" uid="uid://b4n34k5okmtue" path="res://Player/states/run_state.gd" id="18_2xrq6"]
[ext_resource type="Script" uid="uid://doqw2wb1ceh2l" path="res://Player/states/jump_state.gd" id="19_pi3ps"]
[ext_resource type="Script" uid="uid://cj7ptn52jmw5q" path="res://Player/states/fall_state.gd" id="20_kswpp"]
[ext_resource type="Texture2D" uid="uid://cwmdd1eg7i2ix" path="res://assets/sprites/player/2 Punk/Punk_idle.png" id="23_x3qp0"]
[ext_resource type="Script" uid="uid://bqcdalmpfc5qk" path="res://Player/states/attack_state.gd" id="24_8nn5r"]
[ext_resource type="Texture2D" uid="uid://dxv2cdj64vwmw" path="res://assets/sprites/player/2 Punk/Punk_jump.png" id="24_76i7i"]
[ext_resource type="Texture2D" uid="uid://bjf526dd75pdf" path="res://assets/sprites/player/2 Punk/Punk_run.png" id="25_mndc6"]
[ext_resource type="Script" uid="uid://c1kwytt5rc3qn" path="res://Player/actions/attack.gd" id="26_x3qp0"]
[ext_resource type="Script" uid="uid://56jvapvdt2q" path="res://Player/FacingCollisionShape2d.gd" id="27_hqjia"]

[sub_resource type="AtlasTexture" id="AtlasTexture_8nn5r"]
atlas = ExtResource("3_v5i4m")
region = Rect2(0, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_kvwax"]
atlas = ExtResource("3_v5i4m")
region = Rect2(128, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_x3qp0"]
atlas = ExtResource("3_v5i4m")
region = Rect2(256, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_76i7i"]
atlas = ExtResource("4_p1lr0")
region = Rect2(0, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_mndc6"]
atlas = ExtResource("4_p1lr0")
region = Rect2(128, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_1hh02"]
atlas = ExtResource("4_p1lr0")
region = Rect2(256, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_5ttev"]
atlas = ExtResource("4_p1lr0")
region = Rect2(384, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_mlfor"]
atlas = ExtResource("2_aqcbf")
region = Rect2(0, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_8nth8"]
atlas = ExtResource("3_gskgj")
region = Rect2(0, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_8tqfn"]
atlas = ExtResource("3_gskgj")
region = Rect2(128, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_stbqk"]
atlas = ExtResource("3_gskgj")
region = Rect2(256, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_3c3w1"]
atlas = ExtResource("1_3c3w1")
region = Rect2(0, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_wnvi2"]
atlas = ExtResource("1_3c3w1")
region = Rect2(128, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_83hs8"]
atlas = ExtResource("1_3c3w1")
region = Rect2(256, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_x8kxw"]
atlas = ExtResource("1_3c3w1")
region = Rect2(384, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_aqcbf"]
atlas = ExtResource("1_3c3w1")
region = Rect2(512, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_gskgj"]
atlas = ExtResource("1_3c3w1")
region = Rect2(640, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_06mnu"]
atlas = ExtResource("1_3c3w1")
region = Rect2(768, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_mhpjh"]
atlas = ExtResource("1_3c3w1")
region = Rect2(896, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_ndjxb"]
atlas = ExtResource("1_3c3w1")
region = Rect2(1024, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_5qrx2"]
atlas = ExtResource("1_3c3w1")
region = Rect2(1152, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_y617q"]
atlas = ExtResource("5_06mnu")
region = Rect2(0, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_8eyfg"]
atlas = ExtResource("5_06mnu")
region = Rect2(128, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_76mgg"]
atlas = ExtResource("5_06mnu")
region = Rect2(256, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_ddnt4"]
atlas = ExtResource("5_06mnu")
region = Rect2(384, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_a0lmo"]
atlas = ExtResource("5_06mnu")
region = Rect2(512, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_234y4"]
atlas = ExtResource("5_06mnu")
region = Rect2(640, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_b32pr"]
atlas = ExtResource("2_wnvi2")
region = Rect2(0, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_hbkom"]
atlas = ExtResource("2_wnvi2")
region = Rect2(128, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_d4g0h"]
atlas = ExtResource("2_wnvi2")
region = Rect2(256, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_v4f8b"]
atlas = ExtResource("2_wnvi2")
region = Rect2(384, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_t8epa"]
atlas = ExtResource("2_wnvi2")
region = Rect2(512, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_w24id"]
atlas = ExtResource("2_wnvi2")
region = Rect2(640, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_uewl2"]
atlas = ExtResource("2_wnvi2")
region = Rect2(768, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_ofhxi"]
atlas = ExtResource("2_wnvi2")
region = Rect2(896, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_yu5hk"]
atlas = ExtResource("2_wnvi2")
region = Rect2(1024, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_q6miu"]
atlas = ExtResource("2_wnvi2")
region = Rect2(1152, 0, 128, 128)

[sub_resource type="SpriteFrames" id="SpriteFrames_yu5hk"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_8nn5r")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_kvwax")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_x3qp0")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_76i7i")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_mndc6")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_1hh02")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_5ttev")
}],
"loop": false,
"name": &"attack",
"speed": 18.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_mlfor")
}],
"loop": false,
"name": &"crouch",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_8nth8")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_8tqfn")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_stbqk")
}],
"loop": true,
"name": &"fall",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_3c3w1")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_wnvi2")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_83hs8")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_x8kxw")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_aqcbf")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_gskgj")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_06mnu")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_mhpjh")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ndjxb")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_5qrx2")
}],
"loop": true,
"name": &"idle",
"speed": 12.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_y617q")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_8eyfg")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_76mgg")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ddnt4")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_a0lmo")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_234y4")
}],
"loop": true,
"name": &"jump",
"speed": 12.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_b32pr")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_hbkom")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_d4g0h")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_v4f8b")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_t8epa")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_w24id")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_uewl2")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ofhxi")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_yu5hk")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_q6miu")
}],
"loop": true,
"name": &"run",
"speed": 12.0
}]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_83hs8"]
radius = 6.0

[sub_resource type="AtlasTexture" id="AtlasTexture_eac1a"]
atlas = ExtResource("5_kvwax")
region = Rect2(0, 0, 24, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_ijyjs"]
atlas = ExtResource("5_kvwax")
region = Rect2(48, 0, 24, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_a4b0l"]
atlas = ExtResource("5_kvwax")
region = Rect2(96, 0, 24, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_u3hyo"]
atlas = ExtResource("5_kvwax")
region = Rect2(144, 0, 24, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_pysui"]
atlas = ExtResource("5_kvwax")
region = Rect2(200, 0, 22, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_4ntn1"]
atlas = ExtResource("5_kvwax")
region = Rect2(244, 0, 22, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_7r4bu"]
atlas = ExtResource("23_x3qp0")
region = Rect2(0, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_8vtq1"]
atlas = ExtResource("23_x3qp0")
region = Rect2(48, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_use2k"]
atlas = ExtResource("23_x3qp0")
region = Rect2(96, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_7647m"]
atlas = ExtResource("23_x3qp0")
region = Rect2(144, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_gtkor"]
atlas = ExtResource("24_76i7i")
region = Rect2(144, 0, 24, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_wslmf"]
atlas = ExtResource("23_x3qp0")
region = Rect2(0, 0, 24, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_u3aff"]
atlas = ExtResource("23_x3qp0")
region = Rect2(48, 0, 24, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_n65jb"]
atlas = ExtResource("23_x3qp0")
region = Rect2(96, 0, 24, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_lf4f6"]
atlas = ExtResource("23_x3qp0")
region = Rect2(144, 0, 24, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_q4eru"]
atlas = ExtResource("24_76i7i")
region = Rect2(0, 0, 24, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_ooivl"]
atlas = ExtResource("24_76i7i")
region = Rect2(48, 0, 24, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_kk601"]
atlas = ExtResource("24_76i7i")
region = Rect2(96, 0, 24, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_p3v13"]
atlas = ExtResource("24_76i7i")
region = Rect2(144, 0, 24, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_5cssr"]
atlas = ExtResource("25_mndc6")
region = Rect2(0, 0, 24, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_h1ws3"]
atlas = ExtResource("25_mndc6")
region = Rect2(48, 0, 24, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_mwk7e"]
atlas = ExtResource("25_mndc6")
region = Rect2(96, 0, 24, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_udvyq"]
atlas = ExtResource("25_mndc6")
region = Rect2(144, 0, 24, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_ktadw"]
atlas = ExtResource("25_mndc6")
region = Rect2(192, 0, 24, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_qillh"]
atlas = ExtResource("25_mndc6")
region = Rect2(240, 0, 24, 48)

[sub_resource type="SpriteFrames" id="SpriteFrames_7r4bu"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_eac1a")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ijyjs")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_a4b0l")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_u3hyo")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_pysui")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_4ntn1")
}],
"loop": false,
"name": &"attack",
"speed": 18.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_7r4bu")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_8vtq1")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_use2k")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_7647m")
}],
"loop": true,
"name": &"crouch",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_gtkor")
}],
"loop": true,
"name": &"fall",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_wslmf")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_u3aff")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_n65jb")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_lf4f6")
}],
"loop": true,
"name": &"idle",
"speed": 12.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_q4eru")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ooivl")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_kk601")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_p3v13")
}],
"loop": false,
"name": &"jump",
"speed": 12.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_5cssr")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_h1ws3")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_mwk7e")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_udvyq")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ktadw")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_qillh")
}],
"loop": true,
"name": &"run",
"speed": 12.0
}]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_ro0t8"]
radius = 17.0
height = 46.0

[node name="Player" type="CharacterBody2D" node_paths=PackedStringArray("animated_sprite_2d", "gravity_component", "input_component", "movement_component", "animation_component", "jump_component")]
collision_layer = 2
script = ExtResource("1_wnvi2")
animated_sprite_2d = NodePath("Bob")
gravity_component = NodePath("GravityComponent")
input_component = NodePath("InputComponent")
movement_component = NodePath("MovementComponent")
animation_component = NodePath("AnimationComponent")
jump_component = NodePath("AdvancedJumpComponent")

[node name="StateDebugLabel" type="Label" parent="." node_paths=PackedStringArray("state_machine")]
visible = false
offset_left = -46.0
offset_top = -58.0
offset_right = 63.0
offset_bottom = -35.0
text = "State:"
script = ExtResource("16_8qjgm")
state_machine = NodePath("../CharacterStateMachine")

[node name="Bob" type="AnimatedSprite2D" parent="."]
visible = false
position = Vector2(0, -16)
sprite_frames = SubResource("SpriteFrames_yu5hk")
animation = &"attack"
autoplay = "idle"
frame = 6
frame_progress = 1.0

[node name="Idle Col" type="CollisionShape2D" parent="."]
position = Vector2(0, -15)
shape = SubResource("CapsuleShape2D_83hs8")

[node name="GravityComponent" parent="." instance=ExtResource("7_npwbq")]

[node name="MovementComponent" parent="." instance=ExtResource("8_pn6s4")]

[node name="InputComponent" parent="." instance=ExtResource("9_7oing")]

[node name="AnimationComponent" parent="." instance=ExtResource("10_7oing")]

[node name="JumpComponent" parent="." instance=ExtResource("11_5stf6")]

[node name="AdvancedJumpComponent" parent="." instance=ExtResource("12_180ig")]

[node name="CharacterStateMachine" type="Node" parent="." node_paths=PackedStringArray("character", "current_state", "movement_component", "jump_component", "animation_component")]
script = ExtResource("13_20koh")
character = NodePath("..")
current_state = NodePath("Idle")
movement_component = NodePath("../MovementComponent")
jump_component = NodePath("../AdvancedJumpComponent")
animation_component = NodePath("../AnimationComponent")

[node name="Idle" type="Node" parent="CharacterStateMachine"]
script = ExtResource("17_kswpp")

[node name="Run" type="Node" parent="CharacterStateMachine"]
script = ExtResource("18_2xrq6")

[node name="Jump" type="Node" parent="CharacterStateMachine"]
script = ExtResource("19_pi3ps")

[node name="Fall" type="Node" parent="CharacterStateMachine"]
script = ExtResource("20_kswpp")

[node name="Attack" type="Node" parent="CharacterStateMachine" node_paths=PackedStringArray("attack_col")]
script = ExtResource("24_8nn5r")
attack_col = NodePath("../../Sword/Attack Col")

[node name="Debug" type="Node" parent="."]

[node name="Punk" type="AnimatedSprite2D" parent="."]
visible = false
position = Vector2(-1, -24)
sprite_frames = SubResource("SpriteFrames_7r4bu")
animation = &"attack"
autoplay = "idle"
frame = 5
frame_progress = 1.0

[node name="Sword" type="Area2D" parent="." node_paths=PackedStringArray("animation_component", "facing_shape")]
collision_layer = 0
collision_mask = 4
script = ExtResource("26_x3qp0")
animation_component = NodePath("../AnimationComponent")
facing_shape = NodePath("Attack Col")

[node name="Attack Col" type="CollisionShape2D" parent="Sword"]
position = Vector2(23, -17)
rotation = 1.5707964
shape = SubResource("CapsuleShape2D_ro0t8")
disabled = true
script = ExtResource("27_hqjia")
facing_left_position = Vector2(-23, -18)
facing_right_position = Vector2(23, -18)

[connection signal="body_entered" from="Sword" to="Sword" method="_on_body_entered"]
